k8s/backend/event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: charukaiit/event-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  type: ClusterIP
  selector:
    app: event-service
  ports:
    - port: 8000
      targetPort: 8000
