k8s/backend/program-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: program-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: program-service
  template:
    metadata:
      labels:
        app: program-service
    spec:
      containers:
        - name: program-service
          image: charukaiit/program-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: program-service
spec:
  type: ClusterIP
  selector:
    app: program-service
  ports:
    - port: 8000
      targetPort: 8000
