k8s/backend/registration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
        - name: registration-service
          image: charukaiit/registration-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  type: ClusterIP
  selector:
    app: registration-service
  ports:
    - port: 8000
      targetPort: 8000
