k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8000

          - path: /programs
            pathType: Prefix
            backend:
              service:
                name: program-service
                port:
                  number: 8000

          - path: /registrations
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 8000
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8000
